# data-relay-grpc

./: .gitmodules  README.md
.github/: CODEOWNERS
.github/actions/install-dependencies/: action.yml
.github/workflows/: ci-build-server.yml
protos/blob_relay/: blob_reference.proto  blob_relay_local.proto  blob_relay_streaming.proto
protos/data_relay_grpc/proto/blob_relay/: blob_reference.proto  blob_reference.proto~  blob_relay_local.proto  blob_relay_local.proto~  blob_relay_streaming.proto  blob_relay_streaming.proto~
server/: .gitignore  CMakeLists.txt  README.md
server/cmake/: Tests.cmake
server/include/data-relay-grpc/blob_relay/: service.h  service_configuration.h  services.h  session.h
server/include/data_relay_grpc/blob_relay/: api_version.h  service.h  service_configuration.h
server/include/data_relay_grpc/common/: api.h  service.h  session.h  tag_generator.h
server/include/data_relay_grpc/common/detail/: README  session_impl.h  session_manager.h  session_store.h
server/src/: CMakeLists.txt
server/src/data-relay-grpc/blob_relay/: blob_session.h  blob_session_manager.cpp  blob_session_manager.h  local_service.cpp  local_service.h  local_service_impl.cpp  local_service_impl.h  service.cpp  services.cpp  session.cpp  session.h  session_impl.cpp  session_impl.h  session_manager.cpp  session_manager.h  session_store.h  streaming_service.cpp  streaming_service.h  streaming_service_impl.cpp  streaming_service_impl.h  utils.h
server/src/data-relay-grpc/blob_relay/limestone/: api_helper.h
server/src/data_relay_grpc/: logging.h  logging_helper.h
server/src/data_relay_grpc/blob_relay/: local_service.cpp  local_service.h  service.cpp  service_impl.cpp  service_impl.h  session.cpp  session_impl.cpp  session_impl.h  session_manager.cpp  session_manager.h  streaming_service.cpp  streaming_service.h  tag_generator.h  utils.h
server/src/data_relay_grpc/common/: service.cpp  session.cpp  session_impl.cpp  session_impl.h  session_manager.cpp  session_manager.h  session_store.h
server/src/data_relay_grpc/common/detail/: session_impl.cpp  session_manager.cpp
server/test/: CMakeLists.txt  main.cpp  test_root.h  test_root.h~
server/test/client/: CMakeLists.txt  Makefile  client.h  client.h~  main.cpp  session.h  session.h~
server/test/client/tateyama/authentication/: authentication.cpp  client.h
server/test/client/tateyama/proto/datastore/: response.proto
server/test/client/tateyama/proto/debug/: request.proto
server/test/client/tateyama/transport/: client_wire.h  transport.h  transport.h~
server/test/data-relay-grpc/blob_relay/: message_error_test.cpp  quota_test.cpp  remove_test.cpp  session_store_directory_test.cpp  stream_basic_test.cpp  stream_dl_test.cpp  stream_error_test.cpp  stream_mock_tag_test.cpp  stream_quota_test.cpp  stream_remove_test.cpp  stream_test.cpp
server/test/data-relay-grpc/blob_relay/smoke_test/: support.h
server/test/data-relay-grpc/blob_relay/smoke_test/proto/: blob_relay_smoke_test.proto
server/test/data-relay-grpc/grpc/proto/: ping_service.proto
server/test/data-relay-grpc/grpc/service/: ping_service.h
server/test/data_relay_grpc/blob_relay/: session_store_directory_test.cpp  stream_basic_test.cpp  stream_error_test.cpp  stream_mock_tag_ng_test.cpp  stream_mock_tag_ok_test.cpp  stream_mock_tag_test.cpp  stream_quota_basic_test.cpp  stream_quota_remove_by_entries_test.cpp  stream_quota_remove_test.cpp  stream_quota_size_test.cpp  stream_quota_test.cpp  stream_remove_test.cpp
server/test/data_relay_grpc/blob_relay/smoke_test/: support.h
server/test/data_relay_grpc/common/: session_store_directory_basic_test.cpp  session_store_directory_not_directory_test.cpp  session_store_directory_not_exist_test.cpp  session_store_directory_symbolic_link_test.cpp  session_store_directory_test.cpp
server/test/data_relay_grpc/grpc/: grpc_server_test.cpp  grpc_server_test_base.h
server/test/tateyama/proto/auth/: response.proto
server/test/tateyama/proto/debug/: response.proto
server/test/tateyama/proto/session/: request.proto
